fixed admin panel visibility in header

--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -12,9 +12,9 @@
   height: 64px;
 }
 .mat-storMain {
-  color: #b82d70;
+  color: #005200;
 }
 
 .mat-toolbar-row{
-  background-color: #d3d9ef;
+  background-color: #f0f0f0;
 }
